# fin-mcp

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/keycloak/: realm-export.json
docs/: PLAN.md  PLAN_PHASE1_AUTH.md  PLAN_PHASE2_CORE_MIDDLEWARE.md  PLAN_PS2.md
src/fin_mcp/: audit.py  cache.py  config.py  dependencies.py  logging.py  rate_limit.py  server.py
src/fin_mcp/auth/: metadata.py  middleware.py  validator.py
