[project]
name = "fin-mcp"
version = "0.1.0"
description = "MCP server for financial APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
    "structlog>=25.5.0",
]

[project.scripts]
fin-mcp = "fin_mcp.server:main"

[dependency-groups]
dev = [
    "mypy<1.20.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_mcp"]
