[project]
name = "fin-mcp"
version = "0.1.0"
description = "MCP server for financial APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "structlog>=25.5.0",
]

[project.scripts]
fin-mcp = "fin_mcp.server:main"

[dependency-groups]
dev = [
    "mypy<1.20.0",
    "types-python-jose>=3.5.0.20250531",
    "uvicorn>=0.42.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_mcp"]
